--- a/iMyApp/Apresentacao/WindowsForms/Properties/Resources.resx
+++ b/iMyApp/Apresentacao/WindowsForms/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="sem-foto" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\sem-foto.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Captura de tela 2023-09-19 210600" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Captura de tela 2023-09-19 210600.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
